Section 4 - Partial View Buttons

--- a/Uplift/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/Uplift/Areas/Admin/Views/Category/Upsert.cshtml
@@ -38,6 +38,20 @@
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                 </div>
             </div>
+            <div class="form-group row">
+                <div class="col-8 offset-4">
+                    @if(Model.Id != 0)
+                    {
+                        //Edit button and back to list
+                        <partial name="_EditAndBackToListButton" model="Model.Id" />
+                    }
+                    else
+                    {
+                        //Create button and back to list
+                        <partial name="_CreateAndBackToListButton" />
+                    }
+                </div>
+            </div>
         </div>
 
     </div> 
