Section 6 - Service Upsert View

--- a/Uplift/Areas/Admin/Views/Service/Upsert.cshtml
+++ b/Uplift/Areas/Admin/Views/Service/Upsert.cshtml
@@ -1,8 +1,94 @@
-﻿
+﻿@model Uplift.Models.ViewModels.ServiceVM
+
 @{
-    ViewData["Title"] = "Upsert";
+    var title = "Create Service";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Upsert</h1>
+<form method="post" asp-action="Upsert" enctype="multipart/form-data">
 
+    <div class="row px-2 mx-2 backgroundWhite border">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        @if (Model.Service.Id != 0)
+        {
+            <input type="hidden" asp-for="Service.Id" />
+            title = "Edit Service";
+        }
+
+        <div class="col-12">
+            <h2 class="text-primary">@title</h2>
+            <br />
+        </div>
+        <div class="col-9">
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Service.Name"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Service.Name" class="form-control" />
+                    <span asp-validation-for="Service.Name" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Service.Price"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Service.Price" class="form-control" />
+                    <span asp-validation-for="Service.Price" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Service.LongDesc"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Service.LongDesc" class="form-control" />
+                    <span asp-validation-for="Service.LongDesc" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Service.ImageUrl"></label>
+                </div>
+                <div class="col-8">
+                   <input type="file" name="files" id="uploadBox" multiple class="form-control" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Service.FrequencyId"></label>
+                </div>
+                <div class="col-8">
+                    @Html.DropDownListFor(m => m.Service.FrequencyId, Model.FrequencyList,
+                                            "- Please select a Frequceny-", new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Service.CategoryId"></label>
+                </div>
+                <div class="col-8">
+                    @Html.DropDownListFor(m => m.Service.CategoryId, Model.CategoryList,
+                                            "- Please select a Category-", new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-8 offset-4">
+                    @if (Model.Service.Id != 0)
+                    {
+                        //Edit button and back to list
+                        <partial name="_EditAndBackToListButton" model="Model.Service.Id" />
+                    }
+                    else
+                    {
+                        //Create button and back to list
+                        <partial name="_CreateAndBackToListButton" />
+                    }
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</form>
