--- a/Uplift/Areas/Admin/Views/Service/Upsert.cshtml
+++ b/Uplift/Areas/Admin/Views/Service/Upsert.cshtml
@@ -43,7 +43,7 @@
                     <label asp-for="Service.LongDesc"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="Service.LongDesc" class="form-control" />
+                    <textarea asp-for="Service.LongDesc" class="form-control" style="height:300px;"></textarea>
                     <span asp-validation-for="Service.LongDesc" class="text-danger"></span>
                 </div>
             </div>
@@ -104,8 +104,16 @@
 
 </form>
 
-@section Scripts{ 
+@section Scripts{
+    <script src="https://cdn.tiny.cloud/1/n94ifuzvl80pchikopiwgz2esrw8n28dwcywvpejlqrregfp/tinymce/5/tinymce.min.js"></script> 
     <script>
+
+    tinymce.init({
+        selector: 'textarea',
+        plugins: 'lists',
+        menubar: 'file edit format'
+    });
+
     function validateInput() {
         if (document.getElementById("uploadBox").value == "") {
             swal("Error", "Please Select an Image", "error")
