--- a/Uplift/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/Uplift/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -7,7 +7,7 @@
 <div class="container row">
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Order Request Submitted</h1><br />
-        <img src="~/images/leaves.png" width="50%" />
+        <img src="~/images/lawn_leaf.jpg" width="50%" />
     </div>
     <div class="col-12 text-center" style="color:maroon">
         <br />
