--- a/Uplift/Areas/Admin/Views/User/Index.cshtml
+++ b/Uplift/Areas/Admin/Views/User/Index.cshtml
@@ -4,5 +4,69 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<br /><br />
+<div class="border backgroundWhite">
+    <div class="row">
+        <div class="col-6">
+            <h2 class="text-info">Employees List</h2>
+        </div>
+        <div class="col-6 text-right">
+            <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-info">
+                <i class="fas fa-plus"></i> &nbsp; New Employee Registeration
+            </a>
+        </div>
+    </div>
+
+    <br />
+    @if (Model.Count() > 0)
+    {
+        <table class="table table-striped border">
+            <tr class="table-secondary">
+                <th>
+                    @Html.DisplayNameFor(m => m.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(m => m.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(m => m.PhoneNumber)
+                </th>
+                <th></th>
+            </tr>
+            @foreach(var item in Model)
+            {
+        <tr>
+            <td>
+                @Html.DisplayFor(m => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.PhoneNumber)
+            </td>
+            <td>
+                @if (item.LockoutEnd == null || item.LockoutEnd < DateTime.Now)
+                {
+                    <a class="btn btn-success text-white" asp-action="Lock" asp-route-id="@item.Id">
+                        <i class="fas fa-lock-open"></i>
+                    </a>
+                }
+                else
+                {
+                    <a class="btn btn-danger text-white" asp-action="UnLock" asp-route-id="@item.Id">
+                        <i class="fas fa-lock"></i>
+                    </a>
+                }
+            </td>
+        </tr>
+            }
+        </table>
+    }
+    else
+    {
+        <p>No Users Exists...</p>
+    }
+
+</div>
 
