Section 11 - Order's List Demo

--- a/Uplift/Areas/Admin/Views/Order/Index.cshtml
+++ b/Uplift/Areas/Admin/Views/Order/Index.cshtml
@@ -1,7 +1,31 @@
 ﻿@using Uplift.Utility
 
+@{
+    var status = Context.Request.Query["status"];
 
-<h1>Index</h1>
+    var approved = "text-primary";
+    var pending = "text-primary";
+    var all = "text-primary";
+
+    if (status == "approved")
+    {
+        approved = "active text-white";
+    }
+    else
+    {
+        if (status == "pending")
+        {
+            pending = "active text-white";
+        }
+        else
+        {
+            all = "active text-white";
+        }
+    }
+
+}
+
+
 
 <div class="border backgroundWhite p-3">
     <div class="d-flex justify-content-between mb-3">
@@ -11,13 +35,13 @@
         <div class="p-2">
             <ul class="list-group list-group-horizontal-sm">
                 <a style="text-decoration:none" asp-controller="Order" asp-route-status="pending" asp-action="Index">
-                    <li class="list-group-item">Pending</li>
+                    <li class="list-group-item @pending">Pending</li>
                 </a>
                 <a style="text-decoration:none" asp-controller="Order" asp-route-status="approved" asp-action="Index">
-                    <li class="list-group-item">Approved</li>
+                    <li class="list-group-item @approved">Approved</li>
                 </a>
                 <a style="text-decoration:none" asp-controller="Order" asp-route-status="all" asp-action="Index">
-                    <li class="list-group-item">All</li>
+                    <li class="list-group-item @all">All</li>
                 </a>
             </ul>
         </div>
@@ -40,6 +64,6 @@
 
 </div>
 
-@section Scripts{ 
+@section Scripts{
     <script src="~/js/orders.js"></script>
 }
