--- a/Uplift/Views/Shared/_Layout.cshtml
+++ b/Uplift/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+
+                    @if (User.IsInRole(SD.Manager) || User.IsInRole(SD.Admin))
+                    {
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Content Management
@@ -49,15 +52,15 @@
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequency</a>
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
+                            @if (User.IsInRole(SD.Admin))
+                            {
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
+                            }
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Order" asp-action="Index">Order</a>
                         </div>
                     </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
-                    @if (HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart) != null)
+                    }
+                       @if (HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart) != null)
                     {
                         <li style="color:white">
                             <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
