--- a/Uplift/Views/Shared/_LoginPartial.cshtml
+++ b/Uplift/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link ">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link "><i class="fas fa-sign-out-alt"></i></button>
         </form>
     </li>
 }
