--- a/Uplift/Views/Shared/_Layout.cshtml
+++ b/Uplift/Views/Shared/_Layout.cshtml
@@ -52,11 +52,13 @@
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequency</a>
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="WebImage" asp-action="Index">Image Uploader</a>
                             @if (User.IsInRole(SD.Admin))
                             {
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
                             }
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Order" asp-action="Index">Order</a>
+
                         </div>
                     </li>
                     }
